# resolve

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/dns/: mod.rs  resolv_conf.rs  resolved.rs
src/explain/: decision_tree.rs
src/nss/: group.rs  hosts.rs  mod.rs  nsswitch.rs  passwd.rs
src/proc/: mod.rs  namespaces.rs
