[package]
name = "resolve"
version = "0.1.0"
edition = "2021"
description = "A deterministic Linux identity-resolution inspector"
license = "MIT OR Apache-2.0"
authors = ["Maruf Ahmed"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = "3.0"
